--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -3,18 +3,22 @@
   Proprietary – See LICENSE for details. 
 -->
 
-<div class="navbar-main" >
+<div class="navbar-main">
     <a href="/index.html" class="logo">
         <img src="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png"
             alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
-        <span >datsforge</span>
+        <span>datsforge</span>
     </a>
 
-    <input type="checkbox" id="menu-toggle-main" class="menu-toggle">
-    <label for="menu-toggle-main" class="menu-icon">&#9776;</label>
+    <input type="checkbox" id="nav-toggle" class="toggle-input" hidden>
+    <label for="nav-toggle" class="button icon-toggle" aria-label="Toggle menu">
+        <svg class="icon">
+            <use href="#menu_icon"></use>
+        </svg>
+    </label>
 
     <ul class="nav-links">
-        <li class="nav-link"><a  href="">Projects</a></li>
+        <li class="nav-link"><a href="">Projects</a></li>
         <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
         <!-- <li class="nav-link"><a  href="">App Projects</a></li> -->
         <!-- <li><a href="">Gallery</a></li> -->
@@ -32,8 +36,8 @@
     <input type="checkbox" id="menu-toggle-legal" class="menu-toggle">
     <label for="menu-toggle-legal" class="menu-icon">&#9776;</label>
 
-     <ul class="nav-links">
-        <li class="nav-link"><a  href="">Projects</a></li>
+    <ul class="nav-links">
+        <li class="nav-link"><a href="">Projects</a></li>
         <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
         <!-- <li class="nav-link"><a  href="">App Projects</a></li> -->
         <!-- <li><a href="">Gallery</a></li> -->
