--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality." />
     <title>datsforge.com</title>
-
     <link rel="icon" type="image/png" href="assets/images/datsforge/icon/datsforge_icon_v006_64x64.png" />
-    <link rel="stylesheet" href="assets/css/variables.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme/dark.css" />
+    <link rel="stylesheet" href="assets/css/theme/theme-core.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
+    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
-
 </head>
 
 <body>
@@ -38,87 +38,86 @@
     <!-- Main Content -->
     <main role="main" id="main-content">
         <div class="container">
-            <article class="content-centered" aria-labelledby="section-intro">
-                <h2 id="section-intro">Forge ideas into unforgettable experiences!</h2>
+            <article class="layout-column align-center" aria-labelledby="section-intro">
+                <h2>Forge ideas into unforgettable experiences!</h2>
                 <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
                     crafted to spark curiosity, solve real problems, and feel damn good to use.
-                <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities that
-                    click, captivate, and connect. You bring the vision. I'll forge the rest.</p>
+                    <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities
+                    that
+                    click, captivate, and connect. You bring the vision. I'll forge the rest.
+                </p>
             </article>
         </div>
 
-
         <div class="container">
-            <section class="content-sectioned" aria-labelledby="section-apps">
+            <section class="layout-column section-divider " aria-labelledby="section-apps">
                 <h2 id="section-apps">Apps that solve real problems</h2>
-                <div class="mockup_right_aligned">
-                    <img src="assets/images/mockups/rentfinder_m3.png" alt="">
-                    <div class="mockup_descriptions">
-                        <div>
-                            <p>Rent Finder is a mobile app designed to solve the real-world challenge of finding rental
-                                spaces.
-                            </p>
-                            <p>
-                                With a user-centered design and direct landlord-renter communication, it
-                                showcases how purposeful design and development can turn everyday problems into
-                                practical
-                                digital solutions.
-                            </p>
-                        </div>
-                        <a href="https://sites.google.com/view/rentfinder/home" class="link-with-icon" target="_blank"
+                <div class="card align-right">
+                    <img class="card-media" src="assets/images/mockups/rentfinder_m3.png" alt="Rent Finder App Mockup"
+                        loading="lazy" />
+                    <div class="card-content">
+                        <p>Rent Finder is a mobile app designed to solve the real-world challenge of finding rental
+                            spaces.
+                        </p>
+                        <p>
+                            With a user-centered design and direct landlord-renter communication, it
+                            showcases how purposeful design and development can turn everyday problems into
+                            practical
+                            digital solutions.
+                        </p>
+                        <a href="https://sites.google.com/view/rentfinder/home" class="button-text-icon" target="_blank"
                             rel="noopener noreferrer" aria-label="Visit Rent Finder site">
                             Visit Site
-                            <svg class="clickable_icon">
+                            <svg class="icon">
                                 <use href="#open_in_new_icon"></use>
                             </svg>
                         </a>
                     </div>
-
                 </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content" aria-labelledby="section-games">
+            <section class="layout-column" aria-labelledby="section-games">
                 <h2 id="section-games">Chill with casual games</h2>
-                <div class="mockup_left_aligned">
-                    <div class="mockup_descriptions">
+                <div class="card align-left">
+                    <div class="card-content">
                         <p>Spidee Tap and Shooting Marbles are casual mobile games developed for android, designed for
                             quick, addictive play.<br>Both are crafted with clean
                             visuals, responsive controls, and a focus on instant fun.</p>
 
-                        <div class="link-with-icon-group">
+                        <div class="layout-column">
                             <a href="https://play.google.com/store/apps/details?id=com.datsgud.speederTap"
-                                class="link-with-icon" target="_blank" rel="noopener noreferrer"
+                                class="button-text-icon" target="_blank" rel="noopener noreferrer"
                                 aria-label="Open link to Spidee Tap on Google Play">
                                 Spidee Tap on Google Play
-                                <svg class="clickable_icon">
+                                <svg class="icon">
                                     <use href="#play_icon"></use>
                                 </svg>
                             </a>
                             <a href="https://play.google.com/store/apps/details?id=com.datsgud.shootingMarbles"
-                                class="link-with-icon" target="_blank" rel="noopener noreferrer"
+                                class="button-text-icon" target="_blank" rel="noopener noreferrer"
                                 aria-label="Open link to Shooting Marbles on Google Play">
                                 Shooting Marbles on Google Play
-                                <svg class="clickable_icon">
+                                <svg class="icon">
                                     <use href="#play_icon"></use>
                                 </svg>
                             </a>
                         </div>
-
-
                     </div>
-                    <img src="assets/images/mockups/st-sm_m1.png" alt="">
+                    <img class="card-media" src="assets/images/mockups/st-sm_m1.png"
+                        alt="Shooting Marbles and Spidee Tap Mockup" loading="lazy" />
                 </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content" aria-labelledby="section-rpg">
+            <section class="layout-column" aria-labelledby="section-rpg">
                 <h2 id="section-rpg">RPG adventures!</h2>
-                <div class="mockup_right_aligned">
-                    <img src="assets/images/mockups/sal_m1.png" alt="">
-                    <div class="mockup_descriptions">
+                <div class="card align-right">
+                    <img class="card-media" src="assets/images/mockups/sal_m1.png" alt="Swords and Legends Mockup"
+                        loading="lazy" />
+                    <div class="card-content">
                         <div>
                             <p>Swords and Legends is a pixel RPG adventure game in active development, designed to
                                 immerse
@@ -129,9 +128,9 @@
                                 This project is not just a game—it's a living proof of what passion-driven, solo indie
                                 development can achieve.</p>
                         </div>
-                        <a href="mailto:sal@datsforge.com" class="link-with-icon" aria-label="Email sal@datsforge.com">
+                        <a href="mailto:sal@datsforge.com" class="button-text-icon" aria-label="Email sal@datsforge.com">
                             Be part of the development!
-                            <svg class="clickable_icon">
+                            <svg class="icon">
                                 <use href="#mail_icon"></use>
                             </svg>
                         </a>
@@ -141,10 +140,10 @@
         </div>
 
         <div class="container">
-            <section class="content" aria-labelledby="section-tools">
+            <section class="layout-column" aria-labelledby="section-tools">
                 <h2 id="section-tools">Useful tools</h2>
-                <div class="mockup_left_aligned">
-                    <div class="mockup_descriptions">
+                <div class="card align-left">
+                    <div class="card-content">
                         <div>
                             <p>datsync is a streamlined Bash tool designed to simplify file synchronization between
                                 Linux
@@ -156,30 +155,31 @@
                                 backup
                                 and transfer workflows.</p>
                         </div>
-                        <a href="https://github.com/datsforge/datsync" class="link-with-icon" target="_blank"
+                        <a href="https://github.com/datsforge/datsync" class="button-text-icon" target="_blank"
                             rel="noopener noreferrer" aria-label="Visit datsync project on Github">
                             Check it out on Github
-                            <svg class="clickable_icon">
+                            <svg class="icon">
                                 <use href="#github_icon"></use>
                             </svg>
                         </a>
                     </div>
-                    <img src="assets/images/mockups/datsync_m1.png" alt="">
+                    <img class="card-media" src="assets/images/mockups/datsync_m1.png" alt="datsync Mockup"
+                        loading="lazy" />
                 </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content-sectioned" aria-labelledby="section-contact">
+            <section class="layout-column section-divider" aria-labelledby="section-contact">
                 <h2 id="section-contact">Let’s build something!</h2>
-                 <div class="mockup_descriptions">
-                <p>Drop me an email anytime:</p>
-                <a href="mailto:sal@datsforge.com" class="link-with-icon" aria-label="Email sal@datsforge.com">
-                   contact@datsforge.com
-                    <svg class="clickable_icon">
-                        <use href="#mail_icon"></use>
-                    </svg>
-                </a>
+                <div class="mockup_descriptions">
+                    <p>Drop me an email anytime:</p>
+                    <a href="mailto:contact@datsforge.com" class="button-text-icon" aria-label="Email sal@datsforge.com">
+                        contact@datsforge.com
+                        <svg class="icon">
+                            <use href="#mail_icon"></use>
+                        </svg>
+                    </a>
             </section>
         </div>
 
