--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -12,9 +12,12 @@
     <meta name="description" content="About datsforge - learn more about our creative lab.">
     <title>About | datsforge.com</title>
     <link rel="icon" type="image/png" href="../images/datsforge/icon/datsforge_icon_v006_64x64.png">
-    <link rel="stylesheet" href="../css/variables.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/nav.css">
+
+    <link rel="stylesheet" href="../css/theme/dark-mc.css" />
+    <link rel="stylesheet" href="../css/theme/theme-core.css" />
+    <link rel="stylesheet" href="../css/nav.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
 </head>
 
@@ -23,7 +26,7 @@
 
     <main>
         <div class="container">
-            <article class="content">
+            <article class="layout-column">
                 <h1>Hey there!</h1>
 
                 <p><strong>Game development</strong> and <strong>pixel art</strong>—now that’s a combo worth obsessing
