--- a/assets/html/legal.html
+++ b/assets/html/legal.html
@@ -12,9 +12,12 @@
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality.">
     <title>datsforge.com</title>
     <link rel="icon" type="image/png" href="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png">
-    <link rel="stylesheet" href="../css/variables.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/nav.css">
+  
+    <link rel="stylesheet" href="../css/theme/dark-mc.css" />
+    <link rel="stylesheet" href="../css/theme/theme-core.css" />
+    <link rel="stylesheet" href="../css/nav.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
 </head>
 
@@ -23,8 +26,8 @@
 
     <main>
         <div class="container">
-            <h1>Legal Pages</h1>
-            <section class="content-sectioned">
+            <h1 class="align-center"> Legal Pages</h1>
+            <section class="layout-column section-divider">
                 <h2>Rent finder</h2>
                 <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
@@ -41,7 +44,7 @@
                 </ul>
             </section>
 
-            <section class="content-sectioned">
+            <section class="layout-column section-divider">
                 <h2>Swords and Legends</h2>
                 <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
@@ -56,7 +59,7 @@
                 </ul>
             </section>
 
-            <section class="content-sectioned">
+            <section class="layout-column section-divider">
                 <h2>Shooting Marbles</h2>
                 <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
@@ -71,7 +74,7 @@
                 </ul>
             </section>
 
-            <section class="content-sectioned">
+            <section class="layout-column section-divider">
                 <h2>Spidee Tap</h2>
                 <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
