update theme, nav bar is now broken for no logical reason

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -11,8 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="About datsforge - learn more about our creative lab.">
     <title>About | datsforge.com</title>
-    <link rel="icon" type="image/png" href="../images/datsforge/icon/datsforge_icon_v006_64x64.png">
-
+    <link rel="icon" type="image/png" href="../images/datsforge/icon/favicon.png">
     <link rel="stylesheet" href="../css/theme/dark-mc.css" />
     <link rel="stylesheet" href="../css/theme/theme-core.css" />
     <link rel="stylesheet" href="../css/nav.css" />
@@ -42,12 +41,14 @@
                         architecture</strong> and <strong>reactive UI</strong> to <strong>smooth performance</strong>
                     and <strong>real-world utility</strong>—I bring ideas to life in app form too. Whether it's a smart
                     productivity tool or a feature-rich utility, I aim to make apps that are <strong>elegant, useful,
-                        and a joy to use</strong>.</p>
+                        and a joy to use</strong>.
+                </p>
 
                 <p>I don’t just develop things—I <strong>create them from scratch</strong>. Whether it's a world, a
                     tool, or an idea, I bring it to life with <strong>attention to detail</strong>,
                     <strong>functionality</strong>, and <strong>soul</strong>. Every project you’ll find here is a
-                    <strong>solo venture</strong>: coding, graphics, design—even this very website.</p>
+                    <strong>solo venture</strong>: coding, graphics, design—even this very website.
+                </p>
 
                 <h3><strong>What I specialize in:</strong></h3>
                 <ul>
@@ -68,6 +69,18 @@
     </main>
 
     <footer></footer>
+
+    <!-- Scripts -->
+
+    <!-- Load Icons -->
+    <div id="svg-sprite-container"></div>
+    <script>
+        fetch('/assets/html/icons.html')
+            .then(res => res.text())
+            .then(svg => {
+                document.getElementById('svg-sprite-container').innerHTML = svg;
+            });
+    </script>
 
     <script type="module">
         import { loadComponent } from '/assets/js/component-loader.js';
