--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -5,18 +5,16 @@
 
 <div class="navbar-main">
     <a href="/index.html" class="logo">
-        <img src="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png"
+        <img src="/assets/images/datsforge/icon/datsforge_icon.png"
             alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
         <span>datsforge</span>
     </a>
-
-    <input type="checkbox" id="nav-toggle" class="toggle-input" hidden>
-    <label for="nav-toggle" class="button icon-toggle" aria-label="Toggle menu">
+    <input type="checkbox" id="nav-toggle-main" class="toggle-input" hidden>
+    <label for="nav-toggle-main" class="button icon-toggle" aria-label="Toggle menu">
         <svg class="icon">
             <use href="#menu_icon"></use>
         </svg>
     </label>
-
     <ul class="nav-links">
         <li class="nav-link"><a href="">Projects</a></li>
         <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
@@ -28,14 +26,16 @@
 
 <div class="navbar-legal">
     <a href="/index.html" class="logo">
-        <img src="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png"
+        <img src="/assets/images/datsforge/icon/datsforge_icon.png"
             alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
         <span>datsforge</span>
     </a>
-
-    <input type="checkbox" id="menu-toggle-legal" class="menu-toggle">
-    <label for="menu-toggle-legal" class="menu-icon">&#9776;</label>
-
+    <input type="checkbox" id="nav-toggle-legal" class="toggle-input" hidden>
+    <label for="nav-toggle-legal" class="button icon-toggle" aria-label="Toggle menu">
+        <svg class="icon">
+            <use href="#menu_icon"></use>
+        </svg>
+    </label>
     <ul class="nav-links">
         <li class="nav-link"><a href="">Projects</a></li>
         <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
@@ -47,16 +47,19 @@
 
 <div class="navbar-terms-privacy">
     <a href="/index.html" class="app-logo">
-        <img src="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png"
+        <img src="/assets/images/datsforge/icon/datsforge_icon.png"
             alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
         <span>datsforge</span>
     </a>
 
-    <input type="checkbox" id="menu-toggle-terms-privacy" class="menu-toggle">
-    <label for="menu-toggle-terms-privacy" class="menu-icon">&#9776;</label>
-
+    <input type="checkbox" id="nav-toggle-tp" class="toggle-input" hidden>
+    <label for="nav-toggle-tp" class="button icon-toggle" aria-label="Toggle menu">
+        <svg class="icon">
+            <use href="#menu_icon"></use>
+        </svg>
+    </label>
     <ul class="nav-links">
-        <li><a class="nav-link" href="">Terms of Use</a></li>
-        <li><a class="nav-link" href="">Privacy Policy</a></li>
+        <li class="nav-link"><a href="">Terms of Use</a></li>
+        <li class="nav-link"><a href="">Privacy Policy</a></li>
     </ul>
 </div>
