updated icon and theme

--- a/assets/html/legal.html
+++ b/assets/html/legal.html
@@ -10,9 +10,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality.">
-    <title>datsforge.com</title>
-    <link rel="icon" type="image/png" href="/assets/images/datsforge/icon/datsforge_icon_v006_64x64.png">
-  
+    <title>Legal | datsforge.com</title>
+    <link rel="icon" type="image/png" href="/assets/images/datsforge/icon/favicon.png">
     <link rel="stylesheet" href="../css/theme/dark-mc.css" />
     <link rel="stylesheet" href="../css/theme/theme-core.css" />
     <link rel="stylesheet" href="../css/nav.css" />
