--- a/projects/games/spideetap/terms.html
+++ b/projects/games/spideetap/terms.html
@@ -10,11 +10,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="datsforge: a creative lab where ideas are forged into reality." />
-  <title>datsforge.com</title>
+  <title>Spidee Tap Terms of Use | datsforge.com</title>
   <link rel="icon" type="image/png" href="/assets/images/datsforge/icon/favicon.png" />
-  <link rel="stylesheet" href="/assets/css/variables.css">
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/theme/dark.css" />
+  <link rel="stylesheet" href="/assets/css/theme/theme-core.css" />
   <link rel="stylesheet" href="/assets/css/nav.css" />
+  <link rel="stylesheet" href="/assets/css/base.css" />
+  <link rel="stylesheet" href="/assets/css/components.css" />
   <link rel="stylesheet" href="/assets/css/mobile.css" />
 </head>
 
@@ -24,8 +26,15 @@
 
   <!-- Main Content -->
   <main id="main-content" tabindex="-1">
-    <div class="container">
-      <section id="terms-of-use" aria-labelledby="terms-heading" class="container content">
+    <div class="container align-center">
+      <h1>Terms of Use</h1>
+      <p>Welcome to <strong>Spidee Tap</strong>, a casual mobile game created by <strong>datsforge</strong>. By using
+        this app, you agree to the
+        following terms. If you don't agree, don't use the game -simple as that.
+      </p>
+    </div>
+    <div class="container  section-divider ">
+      <section id="terms-of-use" aria-labelledby="terms-heading" class="layout-legal-page">
         <div id="terms-content">Loading Terms of use...</div>
       </section>
     </div>
@@ -33,6 +42,18 @@
 
   <!-- Footer -->
   <footer role="contentinfo" aria-label="Site Footer"></footer>
+
+  <!-- Scripts -->
+
+  <!-- Load Icons -->
+  <div id="svg-sprite-container"></div>
+  <script>
+    fetch('/assets/html/icons.html')
+      .then(res => res.text())
+      .then(svg => {
+        document.getElementById('svg-sprite-container').innerHTML = svg;
+      });
+  </script>
 
   <!-- Component Loaders -->
   <script type="module">
@@ -61,7 +82,7 @@
         document.getElementById('terms-content').innerHTML = marked.parse(text);
       })
       .catch(err => {
-        document.getElementById('terms-content').innerText = "Failed to load terms of use.";
+        document.getElementById('terms-content').innerText = "Failed to load terms of use, please check your internet connection.";
         console.error(err);
       });
   </script>
