added dark and light theme toggle feature

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality." />
     <title>datsforge.com</title>
     <link rel="icon" type="image/png" href="assets/images/datsforge/icon/favicon.png" />
-    <link rel="stylesheet" href="assets/css/theme/dark.css" />
+    <link id="dark-theme" rel="stylesheet" href="assets/css/theme/dark.css">
+    <link id="light-theme" rel="stylesheet" href="assets/css/theme/light.css" disabled>
     <link rel="stylesheet" href="assets/css/theme/theme-core.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
 </head>
+
 
 <body>
     <!-- Navigation -->
@@ -184,6 +186,9 @@
                     </a>
             </section>
         </div>
+
+
+
     </main>
 
     <footer></footer>
@@ -203,6 +208,8 @@
     <script type="module">
         import { loadComponent } from '/assets/js/component-loader.js';
         import { setupMobileNavToggles } from '/assets/js/mobile-nav-menu-handler.js';
+        import { setupThemeToggle } from '/assets/js/theme-toggle.js';
+
         try {
             await loadComponent({
                 url: '/assets/html/nav/navbar-main.html',
@@ -215,6 +222,7 @@
                 targetSelector: '.footer-main',
                 mountPoint: 'footer'
             });
+            setupThemeToggle();
         } catch (err) {
             // TODO Handle error
             // ex. showErrorToUser('Failed to load component');
