--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -12,7 +12,8 @@
     <meta name="description" content="About datsforge - learn more about our creative lab.">
     <title>About | datsforge.com</title>
     <link rel="icon" type="image/png" href="../images/datsforge/icon/favicon.png">
-    <link rel="stylesheet" href="../css/theme/dark.css" />
+    <link id="dark-theme" rel="stylesheet" href="../css/theme/dark.css">
+    <link id="light-theme" rel="stylesheet" href="../css/theme/light.css" disabled>
     <link rel="stylesheet" href="../css/theme/theme-core.css" />
     <link rel="stylesheet" href="../css/nav.css" />
     <link rel="stylesheet" href="../css/base.css" />
@@ -87,6 +88,7 @@
     <script type="module">
         import { loadComponent } from '/assets/js/component-loader.js';
         import { setupMobileNavToggles } from '/assets/js/mobile-nav-menu-handler.js';
+        import { setupThemeToggle } from '/assets/js/theme-toggle.js';
         try {
             await loadComponent({
                 url: '/assets/html/nav/navbar-main.html',
@@ -99,6 +101,7 @@
                 targetSelector: '.footer-main',
                 mountPoint: 'footer'
             });
+            setupThemeToggle();
         } catch (err) {
             // TODO Handle error
             // ex. showErrorToUser('Failed to load component');
