--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -4,10 +4,17 @@
 -->
 
 <div class="footer-main">
-    <p>© 2025 datsforge. All rights reserved.</p>
-    <a href="/assets/html/legal.html">Legal</a>
+  <div class="container align-start">
+    <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
+      <svg class="icon theme-icon" width="24" height="24">
+        <use href="#dark_mode_icon"></use>
+      </svg>
+    </button>
+  </div>
+  <p>© 2025 datsforge. All rights reserved.</p>
+  <a href="/assets/html/legal.html">Legal</a>
 </div>
 
 <div class="footer-legal">
-    <p>© 2025 datsforge. All rights reserved.</p>
+  <p>© 2025 datsforge. All rights reserved.</p>
 </div>
