--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -16,5 +16,12 @@
 </div>
 
 <div class="footer-legal">
+   <div class="container align-start">
+    <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
+      <svg class="icon theme-icon" width="24" height="24">
+        <use href="#dark_mode_icon"></use>
+      </svg>
+    </button>
+  </div>
   <p>© 2025 datsforge. All rights reserved.</p>
 </div>
